on edit.view, delete attribute if new name is empty and it is unused